...
    <View style={style.container} testID="TicketsList">
      <ScrollView
        scrollEventThrottle={16}
        refreshControl={
          <RefreshControl refreshing={isRefreshing} onRefresh={onRefresh} />
        }
        testID="ticketList">
        <View style={style.searchContainer}>
          <Text style={style.headerText}>Tickets List</Text>
          <TouchableOpacity style={style.searchButton}>
            <TextInput
              style={style.searchText}
              placeholder="Search"
...
          modalVisible={modalVisible}
          setModalVisible={setModalVisible}
          dropDown={dropDown.current}
        />
      )}
      <DropdownAlert
        testID="dropdown"
        ref={(ref) => (dropDown.current = ref)}
      />
    </View>
  );
};

...
